--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -42,3 +42,16 @@
 .hide{
     display: none;
 }
+
+span.circle{
+    border: 1px solid #c2cfd6;
+    border-radius: 50%;
+    width: 22px;
+    height: 22px;
+    text-align: center;
+    cursor: pointer;
+}
+
+span.circle:hover{
+    background: #fff;
+}
