add font front end

--- a/public/css/embed_font.css
+++ b/public/css/embed_font.css
@@ -11,3 +11,11 @@
 body{
     font-family: KhContent;
 }
+
+.font-KL{
+    font-family: KhKulen !important;
+}
+
+.font-KC{
+    font-family: KhContent;
+}
