--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1680,7 +1680,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   height: calc(2.875rem + 2px); }
 
 .form-group {
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+}
 
 .form-text {
   display: block;
